--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ Javascript-files
 <script src="daily.js"></script>
 <script src="monthly.js"></script>
 <script src="yearly.js"></script>
+<script></script>
 
      
 </body>
