--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Nunito+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700;1,800&family=Nunito:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap" 
     rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="flex-wrap">
@@ -51,8 +51,7 @@
             <div class="chart">
                 <div class="d_wrap">
                     <div class="doughnut">
-                        <canvas id="daily" width="100" height="100"
-                            style="display: block; box-sizing: border-box; height: 447px; width: 447px;">
+                        <canvas id="daily">
                         </canvas>
 
                         <h1>70%</h1>
@@ -63,12 +62,8 @@
 
                 <div class="d_wrap">
                     <div class="doughnut">
-                        <canvas id="monthly" width="100" height="100"
-                            style="display: block; box-sizing: border-box; height: 447px; width: 447px;">
-                        </canvas>
-
+                        <canvas id="monthly"></canvas>
                         <h1>20%</h1>
-
                         <p>Monthly<span> Activities</span></p>
                     </div>
                 </div>
