--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="container">
       <nav class="maximum">
         <img src="images/Clearbills logo-01-1.png" alt="" />
-        <button>Get Early Access</button>
+        <button>Get Early</button>
       </nav>
     </header>
 
@@ -62,5 +62,6 @@
 
       <img src="images/img3.png" alt="" />
     </div>
+
   </body>
 </html>
