I just added access

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="container">
       <nav class="maximum">
         <img src="images/Clearbills logo-01-1.png" alt="" />
-        <button>Get Early</button>
+        <button>Get Early Access</button>
       </nav>
     </header>
 
